editor/static/css/main.css
/* ==========================================================================
   HTML5 Boilerplate styles - h5bp.com (generated via initializr.com)
   ========================================================================== */

html,
button,
input,
select,
textarea {
    color: #222;
}

body {
    font-size: 1em;
    line-height: 1.4;
}

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

img {
    vertical-align: middle;
}

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

.chromeframe {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}


/* ===== Initializr Styles ==================================================
   Author: Jonathan Verrecchia - verekia.com/initializr/responsive-template
   ========================================================================== */

body {
    font: 16px/26px Helvetica, Helvetica Neue, Arial;
    height: 100%;
}

h1{
	font-family: wf_segoe-ui_light, 'Segoe UI Light', 'Segoe WP Light', wf_segoe-ui_normal, 'Segoe UI', Segoe, 'Segoe WP', Tahoma, Verdana, Arial, sans-serif;
}
/* ==============
    MOBILE: Menu
   ============== */

nav ul {
    margin: 0;
    padding: 0;
}


nav a:hover {
    text-decoration: underline;
}

/* ===============
    ALL: IE Fixes
   =============== */

.ie7 .title {
    padding-top: 20px;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */


div.header-container{
	width: 100%;
	height: 48px;
	background-color: #3b7439;
	margin: 0;
	padding: 0;
}

div.header-container div{
	margin: 0;
	padding: 0;
	margin-left: 70px;
	display: block;
	border-right: 1px solid #629061;
	margin-right: 100px;
	height: 48px;
}

img#header_logo{
	width: 72px;
	height: 61px;
	margin: 0;
	padding: 0;
	vertical-align: top;
	position: absolute;
}

div.header-container h1.title{
	margin: 0;
	padding: 0;
	padding-top: 10px;
	width: 100px;
	float: left;
	margin-left: 80px;
	font-size: 24px;
	font-weight: normal;
	color: #FFFFFF;
}

div.header-container ul.navigation{
	display: block;
	width: 200px;
	float: right;
	text-align: right;
	margin-top: 13px;
	margin-right: 17px;
}

div.header-container ul.navigation li{
	display: inline-block;
	width: 65px;
}

div.header-container ul.navigation a{
	text-decoration: none;
	color: #FFFFFF;	
}

div.header-container ul.navigation a:hover{
	text-decoration: underline;
}

div.main-container{
	margin: 0;
	padding: 0;
	margin-left: 90px;
	margin-right: 100px;
	border: 1px solid #c9c9c9;
	border-top: 0;
	overflow: hidden;
}

div#content_loading{
	text-align: center;
	padding-top: 100px;
}

div#file_column{
	margin: 0;
   padding: 0;
   width: 19%;
   float: left;
   background-color: #ededed;
   border-right: 1px solid #cccccc;
}

div#content_column{
	margin: 0;
   padding: 0;
   width: 80%;
   float: right;
}

div#file_editor{
	position: aboslute;
	width: 1000px;
	height: 1000px;
}

